# openapi/models/models.gen.go
@@ -1,6 +1,6 @@
 // Package models provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
 package models
 
 import (
@@ -22,7 +22,7 @@ type Item struct {
 	Name string `json:"name"`
 
 	// Rarity 強さ度合い(レア度) (0~1の数字)
-	Rarity float32 `json:"rarity"`
+	Rarity int `json:"rarity"`
 }
 
 // CombineItemsJSONBody defines parameters for CombineItems.
@@ -39,14 +39,14 @@ type GetItemWithParametersJSONBody struct {
 	// ItemId アイテムID
 	ItemId     *openapi_types.UUID `json:"itemId,omitempty"`
 	Parameters *struct {
+		// Attack 攻撃力
+		Attack *int `json:"Attack,omitempty"`
+
+		// Defence 防御力
+		Defence *int `json:"Defence,omitempty"`
+
 		// HP ヒットポイント
 		HP *int `json:"HP,omitempty"`
-
-		// 攻撃力
-		*int `json:"攻撃力,omitempty"`
-
-		// 防御力
-		*int `json:"防御力,omitempty"`
 	} `json:"parameters,omitempty"`
 }
 
